Show soft-deleted products in order history.
The @SQLRestriction on the Product entity caused order history pages to fail when an order contained a now soft-deleted product.
This is resolved by replacing the failing entity-based fetch with a two-step DTO projection using JPQL.